# uav-mapping-and-ai-human-detection

./: README.md
src/uav_bringup/: CMakeLists.txt  package.xml
src/uav_bringup/launch/: bringup.launch.py  display.launch.py  spawn_uav.launch.py
src/uav_control/: CMakeLists.txt  package.xml
src/uav_description/: CMakeLists.txt  package.xml
src/uav_description/launch/: display.launch.py
src/uav_description/meshes/: back_motor_cw_link.STL  depth_camera_link.STL  front_motor_ccw_link.STL  front_prop_ccw_link.STL  gps_module_link.STL  lidar_link.STL
src/uav_description/urdf/: core.xacro  uav.csv  uav.gazebo.xacro  uav.urdf  uav.urdf.xacro
src/uav_gazebo_sim/: CMakeLists.txt  package.xml
src/uav_gazebo_sim/config/: ros_gz_bridge.yaml
src/uav_gazebo_sim/worlds/: empty.world
src/uav_msgs/: CMakeLists.txt  package.xml
src/uav_navigation/: CMakeLists.txt  package.xml
src/uav_vision/: CMakeLists.txt  package.xml
src/x650_bringup/: CMakeLists.txt  package.xml
src/x650_control/: CMakeLists.txt  package.xml
src/x650_description/: CMakeLists.txt  package.xml
src/x650_description/launch/: display.launch.py
src/x650_description/meshes/: back_motor_ccw_link.STL  back_prop_cw_link.STL  front_motor_cw_link.STL  front_prop_cw_link.STL  left_landing_gear_link.STL  right_landing_gear_link.STL  telemetry_link.STL
src/x650_description/rviz/: display.rviz
src/x650_gazebo_sim/: CMakeLists.txt  package.xml
src/x650_msgs/: CMakeLists.txt  package.xml
src/x650_navigation/: CMakeLists.txt  package.xml
src/x650_vision/: CMakeLists.txt  package.xml
(+3 files in other folders)
